tests/fails/missingmetamethod.t
require("fail")

struct A {
}

terra foo()
	var a : A
	a()
end

foo()
